--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -33,8 +33,8 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Specify the directory containing your static files (default is root)
-          path: '.'
+          # Specify the directory containing your static files (src folder in this case)
+          path: './src'
 
       # Step 4: Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
